--- a/README
+++ b/README
@@ -1,10 +1,6 @@
 This is a "plugin" for the Video Disk Recorder (VDR).
 
-Written by:                  Ulrich Eckhardt <uli-vdr@uli-eckhardt.de>
-
-Project's homepage:          http://www.uli-eckhardt.de/vdr/cec.en.shtml 
-
-Latest version available at: http://git.uli-eckhardt.de/
+Originally written by:                  Ulrich Eckhardt <uli-vdr@uli-eckhardt.de>
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -12,9 +8,9 @@ the Free Software Foundation; either version 2 of the License, or
 (at your option) any later version.
 See the file COPYING for more information.
 
-Requirements
+Minimum requirements
 ==============
-  libCEC V2.2.0 
+  libCEC V4.0.0 
   http://libcec.pulse-eight.com/
   
   PugiXML V1.5, XML parser for C++
@@ -22,6 +18,28 @@ Requirements
 
   For PugiXML on Raspberry Pi see:
   http://distribution-us.hexxeh.net/raspbian/archive/raspbian/pool/main/p/pugixml/
+
+Installing dependencies on Ubuntu/Debian:
+==============
+
+Install the required development packages:
+
+  sudo apt-get install libcec-dev libp8-platform-dev libpugixml-dev vdr-dev
+
+This will install:
+  - libcec-dev: libCEC development files for HDMI-CEC communication
+  - libp8-platform-dev: Platform support library required by libCEC
+  - libpugixml-dev: PugiXML development files for XML parsing
+  - vdr-dev: VDR development headers
+
+Optional: Install the CEC client utility for testing:
+
+  sudo apt-get install cec-utils
+
+Building the plugin:
+
+  make
+  sudo make install
 
 Description:
 ==============
@@ -107,7 +125,8 @@ Format of the configuration file :
 
 The configuration file is in XML format The root element is <config>. Within
 this element one <global> child element is used to specify global options
-for this plugin and several <menu>, <ceckeymap> and <vdrkeymap> child elements.
+for this plugin and several <menu>, <ceckeymap>, <vdrkeymap> and <globalkeymap>
+child elements.
 
 * Ceckeymap
 ====================================
@@ -127,14 +146,24 @@ later in the <player> section to address this key map.
 This tag creates a new key map with a preconfigured map. Elements of this map
 can be overwritten with <key> elements.
 
+* Globalkeymap
+====================================
+This element contains definitions for mapping a VDR Key to one or more CEC keys
+in global context (outside of player mode). The <globalkeymap> tag must have
+the attribute "id" specified. This id is used in the <global> section via the
+"globalvdr" attribute of <keymaps> to address this key map.
+
+This tag creates a new key map with a preconfigured map. Elements of this map
+can be overwritten with <key> elements.
+
 * Key
 ====================================
-This element is used within <ceckeymap> or <vdrkeymap> to overwrite existing
-map entries. The <key> tag must have the attribute "code" specified. This
-specifies the key code to redefine. If used in <ceckeymap> code
-is a CEC key name (see svdrpsend plug cecremote LSTK for the name of the
-supported CEC key codes). When used in <vdrkeymap> the code is the vdr 
-key name as used for example in keymacros.conf.
+This element is used within <ceckeymap>, <vdrkeymap> or <globalkeymap> to
+overwrite existing map entries. The <key> tag must have the attribute "code"
+specified. This specifies the key code to redefine. If used in <ceckeymap>
+code is a CEC key name (see svdrpsend plug cecremote LSTK for the name of the
+supported CEC key codes). When used in <vdrkeymap> or <globalkeymap> the code
+is the vdr key name as used for example in keymacros.conf.
 
 The <key> element can have <value> elements which specifies the key codes
 to map. If no <value> element is specified, this key code is not mapped and
@@ -146,7 +175,7 @@ This element is used within <key> to assign key codes to the key map.
 
 If the <value> element is used in <vdrkeymap> the <value> element contains
 a CEC key name (see svdrpsend plug cecremote LSTK for the name of the
-supported CEC key codes). When used in <ceckeymap> the <value> element is the 
+supported CEC key codes). When used in <ceckeymap> the <value> element is the
 vdr key name as used for example in keymacros.conf.
 
 The following example create a new key map with id "TV" where the VDR key OK
@@ -178,7 +207,7 @@ The device element contains definitions for CEC devices. The main purpose is
 to specify a CEC device by the physical address, e.g. when more than one
 recording device may be available.
 
-The following configuration would create an entry for a blueray player. 
+The following configuration would create an entry for a blueray player.
 <device id="blueray">
    <physical>2000</physical>
    <logical>8</logical>
@@ -197,8 +226,9 @@ case Playback 2) is used.
 ====================================
 
 The child elements of <global> are <rtcdetect>, <cecdebug>, <onstart>,
-<onmanualstart>, <onstop> <onswitchtotv>, <onswitchtoradio>, <onswitchtoreplay>
-<shutdownonstandby>, <poweroffonstandby> and <keymaps>.
+<onmanualstart>, <onstop> <onswitchtotv>, <onswitchtoradio>, <onswitchtoreplay>,
+<onvolumeup>, <onvolumedown>, <shutdownonstandby>, <poweroffonstandby>,
+<keymaps>, <basedevice> and <audiodevice>.
 
 <cecdebug>          Debug level for CEC debugging (see cec_log_level in cectypes.h)
 <onstart>           A command list which is executed upon plugin start.
@@ -208,10 +238,12 @@ The child elements of <global> are <rtcdetect>, <cecdebug>, <onstart>,
 <onswitchtotv>      A command list which is executed if switched to a TV program.
 <onswitchtoradio>   A command list which is executed if switched to a radio program.
 <onswitchtoreplay>  A command list which is executed if the VDR replays a recording.
-<keymaps>           The <keymaps> tag has the attribute cec, which addresses the 
-                    id specified within a <ceckeymap>. This keymap is used to 
-                    convert a CEC-Keycode to a VDR-Key.
-<cecdevicetype>     The device types to register with libCEC. The following 
+<onvolumeup>        A command list which is executed when volume increases.
+<onvolumedown>      A command list which is executed when volume decreases.
+<keymaps>           The <keymaps> tag has the attributes "cec", "vdr" and "globalvdr"
+                    which address the id specified within a <ceckeymap>, <vdrkeymap>
+                    or <globalkeymap>. These keymaps are used for key conversion.
+<cecdevicetype>     The device types to register with libCEC. The following
                     device types are available:
                     * RECORDING_DEVICE
                     * TUNER
@@ -219,6 +251,8 @@ The child elements of <global> are <rtcdetect>, <cecdebug>, <onstart>,
                     * PLAYBACK_DEVICE
                     * AUDIO_SYSTEM
 <hdmiport>          Specify the HDMI-Port where the adapter is connected to.
+<basedevice>        Specify the logical address of the device this adapter is
+                    connected to (typically 0 for TV). Value range: 0-15.
 <rtcdetect>         If set to true (default) use the rtc driver to detect if
                     the vdr was started manually or by rtc alarm. Otherwise
                     use a heuristic. If the VDR was started in a time range
@@ -228,6 +262,11 @@ The child elements of <global> are <rtcdetect>, <cecdebug>, <onstart>,
                     VDR is shut down. Default is false.
 <poweroffonstandby> If set to true, all CEC devices are set to power off when
                     the VDR is shut down. Default is false.
+<startupdelay>      Wait number of seconds before initializing the cec adapter
+                    and execute the <onstart> or <onmanualstart> command lists.
+<audiodevice>       If set, VDR keys kVolUp and kVolDn are forwarded to the
+                    given device in global context.
+<physical>          If set, specify the physical address of the CEC adapter.
 
 NOTE: There seems to be a bug in the libCEC implementation for the Raspberry PI
       which causes a crash when registering more than one device type.
@@ -244,7 +283,7 @@ The <menu> tag must have the following attributes:
   * address : CEC device address.
   
 The child elements of <menu> are <onstart>, <onstop>, <player>,
-<onpoweron>, <onpoweroff>. <onstart>, <onstop> and <onpoweron>, <onpoweroff> 
+<onpoweron>, <onpoweroff>. <onstart>, <onstop> and <onpoweron>, <onpoweroff>
 are mutually exclusive.
 
 <player>    : (see below).
@@ -252,25 +291,25 @@ are mutually exclusive.
 <onstart>   : A command list which is executed when the menu entry is selected.
 <onstop>    : A command list which is executed if <stillpic> is present and 
               the player is stopped.
-<onpoweron> : A command list which is executed if the device is currently 
+<onpoweron> : A command list which is executed if the device is currently
               powered off.
-<onpoweroff>: A command list which is executed if the device is currently 
+<onpoweroff>: A command list which is executed if the device is currently
               powered on.
 
 * OnCECCommand
 ====================================
 
-Perform actions when a cec command is received. 
+Perform actions when a cec command is received.
 
 The <onceccommand> must have the following attributes:
   * command :   A CEC opcode as string as defined in cectypes.h, but without the
-                CEC_OPCODE_ prefix. The opcode can also be defined as a numeric or
-                hex value. The following examples are valid defines for
+                CEC_OPCODE_ prefix. The opcode can also be defined as a numeric
+                or hex value. The following examples are valid defines for
                 CEC_OPCODE_STANDBY:
-              
+
                 command="STANDBY", command="0x36", command="54"
   * initiator : The device which initiated this command.
-  
+
 The child elements of <onceccommand> are <stopmenu>, <execmenu> and
 <commandlist>.
 
@@ -283,19 +322,35 @@ The child elements of <onceccommand> are <stopmenu>, <execmenu> and
 
 * Player 
 ====================================
-Starts a stillpic player and waits until the player is stopped. This tag can 
+Starts a stillpic player and waits until the player is stopped. This tag can
 not be used with <onpoweron> and <onpoweroff>.
 
 The <player> tag must have the following attribute:
   * file : Filename of the still-picture in mpeg format.
-  
-The child elements of <player> are <stop>.and <keymaps> 
 
-<stop>    : Can be used several times and contains a VDR-Key to stop this player.
-<keymaps> : The <keymaps> tag has the attributes "cec" and "vdr" which
-            addresses the id specified within <ceckeymap> or <vdrkeymap>.
-            When the player is started, these keymaps are activated. If a tag is
-            missing, the default keymap is used. 
+The child elements of <player> are <stop>, <onkey>, <onvolumeup>, <onvolumedown>
+and <keymaps> 
+
+<stop>        : Can be used several times and contains a VDR-Key to stop this player.
+<keymaps>     : The <keymaps> tag has the attributes "cec" and "vdr" which
+                addresses the id specified within <ceckeymap> or <vdrkeymap>.
+                When the player is started, these keymaps are activated. If a tag is
+                missing, the default keymap is used.
+<onkey>       : The onkey tag must have set the code attribute.
+                <onkey code="VDR KEY"> can be used to map a VDR key to a command 
+                list. This command list is executed whenever this player is active
+                and the respective key is pressed.
+
+                The following example will execute the script volume_up.sh if the
+                RED-button is pressed. 
+                <onkey code="RED">
+                   <exec>volume_up.sh</exec>
+                </onkey>
+<onvolumeup>  : A command list which is executed whenever the volume increases.
+<onvolumedown>: A command list which is executed whenever the volume decreases.
+
+Note: The volume is still routed to the primary device when <volumeup> or
+      <volumedown> is used.
 
 * Command lists
 ====================================
@@ -331,4 +386,7 @@ DISC     : Disconnect the CEC adapter. This can be used for example,
                           does not start with a slash, the directory is relative
                           to the vdr config directory, otherwise it specifies an
                           absolute path. Default is cecremote.
--x  --configfile <file> : Name of the configuartion file. Default is cecremote.xml
+-x  --configfile <file> : Name of the configuration file. Default is cecremote.xml
+-l  --loglevel <level>  : Set the plugin log level (0=none, 1=errors,
+                          2=errors+warn, 3=errors+warn+debug). Default is VDR's
+                          current log level.
